# trellis

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  pr.yml
backend/: Cargo.toml
backend/migrations/2025-02-16-154832_create_books/: up.sql
backend/migrations/2025-05-17-210000_create_reading_goals/: down.sql  up.sql
backend/migrations/2026-06-04-000000_create_book_shelves/: down.sql  up.sql
backend/migrations/2026-06-24-000000_add_open_library_id/: down.sql  up.sql
backend/migrations/2026-06-30-000000_drop_isbn_unique_indexes/: down.sql  up.sql
backend/migrations/2026-07-01-000000_add_book_rating/: down.sql  up.sql
backend/migrations/2026-07-20-000000_add_book_cover_url/: down.sql  up.sql
backend/migrations/2026-07-22-000000_add_book_page_count/: down.sql  up.sql
backend/src/: book_search.rs  books.rs  goals.rs  goodreads_importer.rs  google_books_client.rs  main.rs  models.rs  open_library_client.rs  readings.rs  schema.rs  shelves.rs  users.rs
docs/superpowers/specs/: 2026-05-25-goals-view-responsive-redesign.md  2026-05-25-home-screen-redesign.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.vue
frontend/src/api/: bookApi.ts  config.ts  googleBooksApi.ts
frontend/src/assets/: app.css  theme.css
frontend/src/components/: AddToShelfPopup.vue  BarcodeScanner.vue  BookProgressInput.vue  ConfirmDialog.vue  CreateGoalModal.vue  CreateShelfModal.vue  PageContainer.vue  StartReadingModal.vue  TrackProgressModal.vue
frontend/src/composables/: useBookCovers.ts  useContainerWidth.ts
frontend/src/router/: index.ts
frontend/src/types/: book.ts  shelf.ts
frontend/src/utils/: bookColorway.ts  coverUrl.ts
frontend/src/views/: AuthView.vue  BookDetailView.vue  GoalDetailView.vue  GoalsView.vue  HomeView.vue  LibraryView.vue  ProfileView.vue  ReadingDetailView.vue  (+3 more)
(+13 files in other folders)
