[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
diesel = { version = "2.3.7", features = ["postgres", "uuid", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
chrono = "0.4.44"
csv = "1.4.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
