[package]
name = "trellis-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"] }
tower-http = { version = "0.6.11", features = ["cors"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
diesel = { version = "2.3.10", features = ["postgres", "uuid", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
uuid = { version = "1.23.3", features = ["v4", "serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
chrono = "0.4.45"
csv = "1.4.0"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"], default-features = false }
futures = "0.3.32"

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
